packages/dartcv/src/gapi/gapi.h

CvStatus *gapi_div(GMat src1, GMat src2, double scale, int ddepth, GMat *rval);
CvStatus *gapi_divC(GMat src, GScalar divisor, double scale, int ddepth, GMat *rval);
CvStatus *gapi_divRC(GScalar divident, GMat src, double scale, int ddepth, GMat *rval);
CvStatus *gapi_dilate3x3(const GMat src, int iterations, int borderType, const Scalar borderValue,
                         GMat *rval);
CvStatus *gapi_erode(const GMat src, const Mat kernel, const CvPoint anchor, int iterations, int borderType,
                     const Scalar borderValue, GMat *rval);
CvStatus *gapi_erode3x3(const GMat src, int iterations, int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_filter2D(const GMat src, int ddepth, const Mat kernel, const CvPoint anchor, const Scalar delta,
                        int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_findContours(const GMat src, const int mode, const int method, GArrayGArrayPoint *rval);
CvStatus *gapi_findContours_1(const GMat src, const int mode, const int method, const GOpaquePoint offset,
                              GArrayGArrayPoint *rval);
CvStatus *gapi_findContoursH(const GMat src, const int mode, const int method, GArrayGArrayPoint *rval,
                             GArrayVec4i *rval1);
CvStatus *gapi_findContoursH_1(const GMat src, const int mode, const int method, const GOpaquePoint offset,
                               GArrayGArrayPoint *rval, GArrayVec4i *rval1);
CvStatus *gapi_fitLine2D(const GArrayPoint2d src, const int distType, const double param, const double reps,
                         const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine2D_1(const GArrayPoint2f src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine2D_2(const GArrayPoint2i src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine2D_3(const GMat src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine3D_1(const GArrayPoint3d src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine3D_2(const GArrayPoint3f src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);
CvStatus *gapi_fitLine3D_3(const GArrayPoint3i src, const int distType, const double param, const double reps,
                           const double aeps, GOpaqueVec4f *rval);