packages/dartcv/lib/src/g/gapi.g.dart


  late final _gapi_dilate3x3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, Scalar,
              ffi.Pointer<GMat>)>>('gapi_dilate3x3');
  late final _gapi_dilate3x3 = _gapi_dilate3x3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_div(
    GMat src1,
    GMat src2,
    double scale,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_div(
      src1,
      src2,
      scale,
      ddepth,
      rval,
    );
  }

  late final _gapi_divPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>>('gapi_div');
  late final _gapi_div = _gapi_divPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GMat, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_divC(
    GMat src,
    GScalar divisor,
    double scale,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_divC(
      src,
      divisor,
      scale,
      ddepth,
      rval,
    );
  }

  late final _gapi_divCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, GScalar, ffi.Double, ffi.Int,
              ffi.Pointer<GMat>)>>('gapi_divC');
  late final _gapi_divC = _gapi_divCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GScalar, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_divRC(
    GScalar divident,
    GMat src,
    double scale,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_divRC(
      divident,
      src,
      scale,
      ddepth,
      rval,
    );
  }

  late final _gapi_divRCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GScalar, GMat, ffi.Double, ffi.Int,
              ffi.Pointer<GMat>)>>('gapi_divRC');
  late final _gapi_divRC = _gapi_divRCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GScalar, GMat, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_erode(
    GMat src,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_erode(
      src,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_erodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, Mat, CvPoint, ffi.Int, ffi.Int,
              Scalar, ffi.Pointer<GMat>)>>('gapi_erode');
  late final _gapi_erode = _gapi_erodePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, Mat, CvPoint, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_erode3x3(
    GMat src,
    int iterations,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_erode3x3(
      src,
      iterations,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_erode3x3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, Scalar,
              ffi.Pointer<GMat>)>>('gapi_erode3x3');
  late final _gapi_erode3x3 = _gapi_erode3x3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_filter2D(
    GMat src,
    int ddepth,
    Mat kernel,
    CvPoint anchor,
    Scalar delta,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_filter2D(
      src,
      ddepth,
      kernel,
      anchor,
      delta,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_filter2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, Mat, CvPoint, Scalar,
              ffi.Int, Scalar, ffi.Pointer<GMat>)>>('gapi_filter2D');
  late final _gapi_filter2D = _gapi_filter2DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, Mat, CvPoint, Scalar, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_findContours(
    GMat src,
    int mode,
    int method,
    ffi.Pointer<GArrayGArrayPoint> rval,
  ) {
    return _gapi_findContours(
      src,
      mode,
      method,
      rval,
    );
  }

  late final _gapi_findContoursPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int,
              ffi.Pointer<GArrayGArrayPoint>)>>('gapi_findContours');
  late final _gapi_findContours = _gapi_findContoursPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, int, ffi.Pointer<GArrayGArrayPoint>)>();

  ffi.Pointer<CvStatus> gapi_findContoursH(
    GMat src,
    int mode,
    int method,
    ffi.Pointer<GArrayGArrayPoint> rval,
    ffi.Pointer<GArrayVec4i> rval1,
  ) {
    return _gapi_findContoursH(
      src,
      mode,
      method,
      rval,
      rval1,
    );
  }

  late final _gapi_findContoursHPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<GArrayGArrayPoint>,
              ffi.Pointer<GArrayVec4i>)>>('gapi_findContoursH');
  late final _gapi_findContoursH = _gapi_findContoursHPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, int,
          ffi.Pointer<GArrayGArrayPoint>, ffi.Pointer<GArrayVec4i>)>();

  ffi.Pointer<CvStatus> gapi_findContoursH_1(
    GMat src,
    int mode,
    int method,
    GOpaquePoint offset,
    ffi.Pointer<GArrayGArrayPoint> rval,
    ffi.Pointer<GArrayVec4i> rval1,
  ) {
    return _gapi_findContoursH_1(
      src,
      mode,
      method,
      offset,
      rval,
      rval1,
    );
  }

  late final _gapi_findContoursH_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat,
              ffi.Int,
              ffi.Int,
              GOpaquePoint,
              ffi.Pointer<GArrayGArrayPoint>,
              ffi.Pointer<GArrayVec4i>)>>('gapi_findContoursH_1');
  late final _gapi_findContoursH_1 = _gapi_findContoursH_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, int, GOpaquePoint,
          ffi.Pointer<GArrayGArrayPoint>, ffi.Pointer<GArrayVec4i>)>();

  ffi.Pointer<CvStatus> gapi_findContours_1(
    GMat src,
    int mode,
    int method,
    GOpaquePoint offset,
    ffi.Pointer<GArrayGArrayPoint> rval,
  ) {
    return _gapi_findContours_1(
      src,
      mode,
      method,
      offset,
      rval,
    );
  }

  late final _gapi_findContours_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, GOpaquePoint,
              ffi.Pointer<GArrayGArrayPoint>)>>('gapi_findContours_1');
  late final _gapi_findContours_1 = _gapi_findContours_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, int, GOpaquePoint, ffi.Pointer<GArrayGArrayPoint>)>();

  ffi.Pointer<CvStatus> gapi_fitLine2D(
    GArrayPoint2d src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine2D(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint2d,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine2D');
  late final _gapi_fitLine2D = _gapi_fitLine2DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GArrayPoint2d, int, double, double, double,
          ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine2D_1(
    GArrayPoint2f src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine2D_1(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine2D_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint2f,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine2D_1');
  late final _gapi_fitLine2D_1 = _gapi_fitLine2D_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GArrayPoint2f, int, double, double, double,
          ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine2D_2(
    GArrayPoint2i src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine2D_2(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine2D_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint2i,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine2D_2');
  late final _gapi_fitLine2D_2 = _gapi_fitLine2D_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GArrayPoint2i, int, double, double, double,
          ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine2D_3(
    GMat src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine2D_3(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine2D_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
              ffi.Double, ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine2D_3');
  late final _gapi_fitLine2D_3 = _gapi_fitLine2D_3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, double, double, double, ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine3D_1(
    GArrayPoint3d src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine3D_1(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine3D_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint3d,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine3D_1');
  late final _gapi_fitLine3D_1 = _gapi_fitLine3D_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GArrayPoint3d, int, double, double, double,
          ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine3D_2(
    GArrayPoint3f src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine3D_2(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }

  late final _gapi_fitLine3D_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint3f,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<GOpaqueVec4f>)>>('gapi_fitLine3D_2');
  late final _gapi_fitLine3D_2 = _gapi_fitLine3D_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GArrayPoint3f, int, double, double, double,
          ffi.Pointer<GOpaqueVec4f>)>();

  ffi.Pointer<CvStatus> gapi_fitLine3D_3(
    GArrayPoint3i src,
    int distType,
    double param,
    double reps,
    double aeps,
    ffi.Pointer<GOpaqueVec4f> rval,
  ) {
    return _gapi_fitLine3D_3(
      src,
      distType,
      param,
      reps,
      aeps,
      rval,
    );
  }
